# Konnaxion_Capsule_Manager

./: .gitignore  README.md  pyproject.toml
docs/: DOC-00_Konnaxion_Canonical_Variables.md  DOC-01_Konnaxion_Product_Vision.md  DOC-02_Konnaxion_Capsule_Architecture.md  DOC-03_Konnaxion_Capsule_Format.md  DOC-04_Konnaxion_Manager_Architecture.md  DOC-05_Konnaxion_Agent_Security_Model.md  DOC-06_Konnaxion_Network_Profiles.md  DOC-07_Konnaxion_Security_Gate.md  DOC-08_Konnaxion_Runtime_Docker_Compose.md  DOC-09_Konnaxion_Backup_Restore_Rollback.md  DOC-10_Konnaxion_Builder_CLI.md  DOC-11_Konnaxion_Box_Appliance_Image.md  DOC-12_Konnaxion_Install_Runbook.md  DOC-13_Konnaxion_Threat_Model.md  DOC-14_Konnaxion_Operator_Guide.md  DOC-15_Konnaxion_Developer_Guide.md  DOC-16_Konnaxion_Manager_GUI_Technical_Contract.md  DOC-17_Konnaxion_GUI_Action_Coverage_Contract.md  DOC-18_Konnaxion_GUI_Target_Modes.md
kx_agent/: __init__.py  actions.py  api.py  audit.py  auth.py  config.py  main.py
kx_agent/backups/: __init__.py  backup.py  restore.py  retention.py  rollback.py  verify.py
kx_agent/capsules/: __init__.py  checksums.py  importer.py  manifest.py  signature.py  verifier.py
kx_agent/instances/: __init__.py  env_writer.py  lifecycle.py  model.py  secrets.py  state.py
kx_agent/network/: __init__.py  exposure.py  profiles.py  tunnels.py
kx_agent/runtime/: __init__.py  compose.py  docker.py  healthchecks.py  logs.py  migrations.py
kx_agent/security/: __init__.py  checks.py  firewall.py  gate.py  policies.py  ports.py
kx_builder/: __init__.py  checksums.py  config.py  images.py  main.py  manifest.py  package.py  signature.py  source_tree.py  verify.py
kx_cli/: __init__.py  backup.py  capsule.py  instance.py  main.py  network.py  security.py
kx_manager/: __init__.py  api.py  client.py  config.py  main.py  models.py  schemas.py
kx_manager/routes/: __init__.py  backups.py  capsules.py  instances.py  logs.py  network.py  security.py
kx_manager/services/: builder.py  deploy.py  targets.py
kx_manager/ui/: __init__.py  action_views.py  actions.py  app.py  forms.py  (+27 more)
kx_shared/: __init__.py  env.py  errors.py  konnaxion_constants.py  paths.py  types.py  validation.py
policies/: allowed_images.yaml  runtime_policy.yaml  security_gate.yaml
profiles/: intranet_private.yaml  local_only.yaml  offline.yaml  private_tunnel.yaml  public_temporary.yaml  public_vps.yaml
templates/: docker-compose.capsule.yml
tests/: test_backup_restore.py  test_capsule_verify.py  test_cli_commands.py  test_compose_generation.py  test_constants.py  test_instance_states.py  test_manager_ui_action_coverage.py  test_manager_ui_contract.py  test_manager_ui_forms.py  test_manager_ui_routes.py  test_manager_ui_target_modes.py  test_manifest.py  test_network_profiles.py  test_security_gate.py
(+4 files in other folders)
